# ai-augmented-swe-workflow-labs

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  SPEC.md  example.py  pyproject.toml  skills-lock.json
.agents/skills/generate-test-cases/: SKILL.md
.agents/skills/generate-test-cases/rules/general/: cleanly-create-test-data.md  code-context-analysis.md  existing-test-awareness.md  general-principles.md  keep-cause-effect-clear.md  keep-tests-focused.md  naming-conventions.md  no-logic-in-tests.md  prefer-public-apis.md  technology-stack-detection.md  test-behaviors-not-methods.md  test-case-generation-strategy.md  verify-relevant-arguments-only.md  what-makes-good-test.md
.cursor/agents/: evaluator.md  generator.md  planner.md
.cursor/rules/: state-machine-harness.mdc
state_machine/: __init__.py  engine.py  evaluator.py  models.py
tests/: test_engine.py  test_evaluator.py
